--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.2.0",
