--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "aws-sdk": "^2.1171.0",
     "classnames": "^2.3.1",
     "cookie": "^0.5.0",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
     "nextjs-progressbar": "^0.0.14",
@@ -31,6 +33,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.3",
     "@types/cookie": "^0.5.1",
+    "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
