--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "aws-sdk": "^2.1171.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "cookie": "^0.5.0",
     "formidable": "^2.0.1",
