--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.3",
+    "@chakra-ui/react": "^2.2.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@prisma/client": "^4.0.0",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
@@ -20,6 +24,7 @@
     "classnames": "^2.3.1",
     "cookie": "^0.5.0",
     "formidable": "^2.0.1",
+    "framer-motion": "^6.4.3",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
     "nextjs-progressbar": "^0.0.14",
@@ -31,20 +36,15 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.3",
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.2",
-    "postcss": "^8.4.14",
     "prisma": "^4.0.0",
-    "tailwindcss": "^3.1.5",
     "typescript": "4.7.4"
   }
 }
